--- a/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/build.gradle
+++ b/ss1/ung-dung-quan-ly-danh-sach-khach-hang/ung-dung-quan-ly-danh-sach-khach-hang/build.gradle
@@ -25,22 +25,19 @@ dependencies {
     compileOnly('javax.servlet:javax.servlet-api:4.0.1')
 
     // https://mvnrepository.com/artifact/org.springframework/spring-webmvc
-    implementation("org.springframework:spring-webmvc:5.3.23")
+    implementation group: 'org.springframework', name: 'spring-webmvc', version: '5.3.23'
+
     // https://mvnrepository.com/artifact/org.thymeleaf/thymeleaf-spring5
     implementation group: 'org.thymeleaf', name: 'thymeleaf-spring5', version: '3.1.1.RELEASE'
     // https://mvnrepository.com/artifact/nz.net.ultraq.thymeleaf/thymeleaf-layout-dialect
     implementation group: 'nz.net.ultraq.thymeleaf', name: 'thymeleaf-layout-dialect', version: '3.1.0'
 
-    implementation group: 'javax.servlet', name: 'jstl', version: '1.2'
-
     // https://mvnrepository.com/artifact/mysql/mysql-connector-java
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.30'
-
     // https://mvnrepository.com/artifact/org.hibernate/hibernate-core
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
 
-    testImplementation("org.junit.jupiter:junit-jupiter-api:${junitVersion}")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:${junitVersion}")
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
 }
 
 test {
