--- a/ss5/picture-of-the-day/picture-of-the-day/build.gradle
+++ b/ss5/picture-of-the-day/picture-of-the-day/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
 
     implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
+    //aspect
+    implementation group: 'org.springframework', name: 'spring-aspects', version: '5.3.20'
 }
 
 test {
