--- a/ss6/ung-dung-blog/ung-dung-blog/build.gradle
+++ b/ss6/ung-dung-blog/ung-dung-blog/build.gradle
@@ -38,6 +38,11 @@ dependencies {
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.10.Final'
 
     implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.7.0'
+
+    // https://mvnrepository.com/artifact/org.springframework/spring-tx
+    implementation group: 'org.springframework', name: 'spring-tx', version: '5.3.23'
+    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.14.2'
 }
 
 test {
